2013-04-28  Araki Kenaaaaa  <arakiken@users.sf.net>

	* im_scim_mod_if.c: Fixed typo(?).

2013-04-28  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* fb/x_display.c: The value of WSKBD environmental variable is used for
	  the keyboard device.

2013-04-28  Araki Ken  <arakiken@users.sf.net>

	* x_display.c: Tune up drawing the wall picture in put_image_to_124bpp()
	  and x_display_get_pixel().

	* x_display.c, x_font.c: TOINT32 and TOINT16 macros are used to access
	  fb and pcf fonts.

	* kik_util.h: BE32DEC, BE16DEC, LE32DEC, LE16DEC, TOINT32 and TOINT16
	  macros are added.

2013-04-27  Araki Ken  <arakiken@users.sf.net>

	* mlimgloader/Makefile.in: mlimgloader can be built without X11 library.

	* configure.in, mlcc/Makefile.in: configure script at the top directory
	  generates Makefile of mlcc.

	* mlcc/configure, mlcc/configure.in, mlcc/config.h.in, mlcc/install-sh:
	  Removed.

2013-04-22  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, doc/ja/README.ja, gtk/INSTALL: Updated.

	* x_screen.c, x_window.h, xlib/x_window.c, win32/x_window.c, fb/x_window.c:
	  - "bel_mode" option accepts "sound|visual" value which enables both audible
	    and visual bell.
	  - "use_urgent_bell=true" works even if the value of "bel_mode" option
	    is "none".

	* configure.in: --with-gui option can accept "xlib,fb" which means
	  compiling both mlterm-xlib and mlterm-fb.

2013-04-21  Araki Ken  <arakiken@users.sf.net>

	* x_display.c: Minor fixes.

2013-04-21  Araki Ken  <arakiken@users.sf.net>

	* x.h, x_display.[ch], x_window.c:
	  Experimental support for less than 8bpp/framebuffer is added.

	* x_imagelib.c, x_color.c, x_display.c:
	  Drawing pictures is supported in 8 bpp/framebuffer.

2013-04-19  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: The wrong height of the preediting cursor of the input
	  method plugin in the case of inner_border != 2 is fixed.
	  (Thanks to @tsutsuii)
